--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,6 +221,13 @@ form {
 	height: 15rem;
 	overflow-y: scroll;
 }
+#submit_btn{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
 .form-style-2 {
 	max-width: 500px;
 	padding: 20px 12px 10px 20px;
